--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+:root{
+  --btn-blue:#033fff;
+}
+.btn-blue-static{
+  background-color: var(--btn-blue);
+  color: white !important;
+}
 .btn-blue:hover {
-  background-color: #033fff;
+  background-color: var(--btn-blue);
   box-shadow: 0 0 10px rgba(3, 62, 255, 0.578);
 }
 
 .icon {
-  color: #033fff;
+  color: var(--btn-blue);
 }
 section {
   margin: 60px 0;
@@ -43,7 +50,7 @@ header .navbar .nav-link {
 }
 
 .promo .btns a:first-child {
-  background-color: #033fff;
+  background-color: var(--btn-blue);
 }
 .promo .carousel-inner {
   height: 653px;
@@ -76,6 +83,33 @@ header .navbar .nav-link {
   transform: translateY(-50px);
 }
 
+.learning {
+  background-color: #eff4f7;
+}
+.learning .accordion-item {
+  border-radius: 20px;
+}
+.learning .accordion-button::after{
+  background-image: url(img/arr.svg),
+  linear-gradient(180deg,
+  #7e32ff 0%,
+  var(--btn-blue) 100%);
+  border-radius: 50%;
+  background-size: 11px;
+  background-repeat: no-repeat, repeat  ;
+  background-position: center ;
+  
+}
+.learning .accordion-button:focus{
+  box-shadow: none;
+  color: black;
+  background-color: white;
+}
+.learning .accordion-button:not(.collapsed){
+  background-color: transparent;
+  color: black;
+  box-shadow: none;
+}
 @media screen and (max-width: 992px) {
   .promo li:before {
     display: none;
